# SURFACE

./: .clang-format  .travis.yml  CMakeLists.txt  LICENSE  LICENSE.3rdparty  README.md  accel_tetra.cc  accel_tetra.h  appveyor.yml  fabfile.py  prim_tetra.h  vcbuild.bat
doc/: INSTALL.md  SURFACE.md
examples/: CMakeLists.txt
examples/ball_and_stick_render/: CMakeLists.txt  main.cc  tiny_pdb.cc  tiny_pdb_math.hxx
examples/common/: SimpleTGA.h
examples/lsglsandbox/: CMakeLists.txt  default.frag  index.html  main.cc  server.js  watch_and_kick.js
examples/nonuniform_volume_render/: CMakeLists.txt  README.md  main.cc
examples/solid_interpolate_render/: CMakeLists.txt  input.frag  main.cc
examples/solid_render/: CMakeLists.txt  main.cc  timerutil.h
examples/sparse_lod_volume_render/: CMakeLists.txt  main.cc
examples/sparse_volume_render/: CMakeLists.txt  input.frag  main.cc
examples/swc_render/: CMakeLists.txt  README.txt  main.cc  tiny_swc.cc  tiny_swc.h
examples/tetra_render/: CMakeLists.txt  Makefile  input.frag  main.cc
examples/variable_line_size_render/: CMakeLists.txt  input.frag  main.cc
gles/: CMakeLists.txt  gles_accel_builder.cc  gles_accel_builder.h  gles_buffer.cc  gles_c_api.cc  gles_c_api.h  gles_common.cc  gles_common.h  gles_context.cc  gles_context.h  gles_fragment_op.cc  gles_glsl_runtime.cc  gles_graphics_state.cc  gles_handle_allocator.h  gles_primitive.cc  gles_program.cc  gles_raytrace_engine.cc  gles_raytrace_engine.h  gles_render_graph.cc  gles_render_graph.h  gles_resource_manager.cc  gles_resource_manager.h  gles_shader.cc  gles_special.cc  gles_texture.cc  gles_vertex.cc  premake4-test.lua  premake4.lua  vcbuild.bat
glsl/: CMakeLists.txt  EXTENSION.md  Makefile  README.md  glsl_config.py  glsl_math_func.h  glsl_runtime.h  glsl_simdclass.h  glsl_translate.py  glslc  glslc.bat  sexps.py  test_runner.py
glsl/patch/: README.txt  build_patched_mesa_k_native.sh  build_patched_mesa_linux.sh  build_patched_mesa_macosx.sh  gen_patch.sh  mesa_glsl_fix.patch  setup_patched_mesa.sh
glsl/test/: test-array-of-struct-001.frag  test-bool2float.frag  test-builtin-inversesqrt-001.frag  test-cameainfo-001.frag  test-cond-and-001.frag  test-cond-or-001.frag  test-constant-001.frag  test-constant-002.frag  test-constant-003.frag  test-discard-001.frag  test-floor-float.frag  test-floor-vec.frag  test-for-001.frag  test-for-002.frag  test-func-001.frag  test-func-002.frag  test-func-vec3swizzle.frag  test-globalfloat.frag  test-glslsandbox-001.frag  test-if.frag  test-isectinfo-001.frag  test-loop-all-eq-001.frag  test-loop-any-neq-001.frag  test-loop-int2float.frag  test-loop-rcp.frag  test-loop-sqrt-001.frag  test-lsgl-define-001.frag  test-mat2-001.frag  test-mat4-001.frag  test-mat4-constant-001.frag  test-mat4-uniform-001.frag  test-matmul-000.frag  test-max-001.frag  test-notbool.frag  test-numIntersects-001.frag  test-pow-vec3.frag  test-queryIntersect-001.frag  test-random-001.frag  test-rayattrib-001.frag  test-raydepth-001.frag  (+20 more)
include/GLES2/: gl2.h  gl2ext.h
include/KHR/: khrplatform.h
perf/: README.md  bm-point-bvh.cc  bm-triangle-bvh.cc  harness-accel-point.cc  harness-accel-triangle.cc  harness-json.cc  harness-prefix-tree.cc  harness-random-points.cc  harness-random-triangles.cc  harness.h  package.json  plotter.js  post.sh  premake4-librender.lua  premake4.lua  run-with-jemalloc.sh  setup.sh
perf/bootstrap/: k_cross.sh  linux-gcc.sh  linux-icc.sh  macosx.sh
render/: accel_line.cc  accel_line.h  accel_particle.cc  accel_particle.h  accel_tetra.cc  accel_tetra.h  accel_triangle.cc  accel_triangle.h  accel_volume.cc  accel_volume.h  aligned_vector.h  bvh_tree.cc  bvh_tree.h  camera.cc  camera.h  intersection.h  logutil.cc  logutil.h  matrix.h  prefix_tree_util.cc  prefix_tree_util.h  prim_line.h  prim_mesh.cc  prim_mesh.h  prim_particle.h  prim_tetra.h  prim_volume.h  ray.h  render_accel_line.cc  render_accel_line.h  render_accel_particle.cc  render_accel_particle.h  render_accel_solid.cc  render_accel_solid.h  render_accel_tetra.cc  render_accel_tetra.h  render_accel_triangle.cc  render_accel_triangle.h  render_accel_volume.cc  render_accel_volume.h  (+29 more)
scripts/: cmake_k_cross.sh  cmake_linux_x64.sh  cmake_macosx.sh  format_source.sh  make_dist.sh  setup_k.sh  setup_k_mpi.sh  setup_k_mpi_screen_parallel.sh  setup_k_profile.sh  setup_linux64_intel_omp.sh  setup_linux_intel.sh  setup_linux_intel_icc.sh  setup_linux_intel_mpi.sh  setup_macosx.sh  setup_macosx_mpi.sh  setup_macosx_mpi_screen_parallel.sh  setup_macosx_omp.sh  travis_setup.sh
test/cctest/: CMakeLists.txt  test-accel-particle.cc  test-buffer.cc  test-draw.cc  test-dummy.cc  test-graphics_state.cc  test-lsgl_ext.cc  test-main.cc  test-matrix.cc  test-prefix-tree.cc  test-shader.cc  test-simdclass.cc  test-texture.cc  test-vertexattrib.cc
tools/linux64/: README.txt  premake4
tools/windows/: README.txt
