INSTALL(FILES glslc DESTINATION glsl PERMISSIONS OWNER_EXECUTE OWNER_READ
	GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ)
INSTALL(FILES glslc.bat DESTINATION glsl)
INSTALL(DIRECTORY DESTINATION glsl/bin)
INSTALL(DIRECTORY DESTINATION glsl/bin/linux_x64)
INSTALL(DIRECTORY DESTINATION glsl/bin/sparc64)
INSTALL(DIRECTORY DESTINATION glsl/bin/macosx64)
INSTALL(FILES bin/linux_x64/glsl_compiler DESTINATION
	glsl/bin/linux_x64/glsl_compiler PERMISSIONS OWNER_EXECUTE OWNER_READ
	GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ)
INSTALL(FILES bin/sparc64/glsl_compiler DESTINATION
	glsl/bin/sparc64/glsl_compiler PERMISSIONS OWNER_EXECUTE OWNER_READ
	GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ)
INSTALL(FILES bin/macosx64/glsl_compiler DESTINATION
	glsl/bin/macosx64/glsl_compiler PERMISSIONS OWNER_EXECUTE OWNER_READ
	GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ)
INSTALL(FILES bin/macosx64/glsl_compiler10.7 DESTINATION
	glsl/bin/macosx64/glsl_compiler10.7 PERMISSIONS OWNER_EXECUTE OWNER_READ
	GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ)
INSTALL(FILES glsl_config.py DESTINATION glsl)
INSTALL(FILES glsl_translate.py DESTINATION glsl)
INSTALL(FILES sexps.py DESTINATION glsl)
INSTALL(FILES glsl_math_func.h DESTINATION glsl)
INSTALL(FILES glsl_runtime.h DESTINATION glsl)
INSTALL(FILES glsl_simdclass.h DESTINATION glsl)
