# Install GLSL related files to ${dist}/bin/glsl
INSTALL(FILES glslc DESTINATION bin/glsl PERMISSIONS OWNER_EXECUTE OWNER_READ
	GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ)
INSTALL(FILES glslc.bat DESTINATION bin/glsl)
INSTALL(DIRECTORY DESTINATION bin/glsl/bin)
INSTALL(DIRECTORY DESTINATION bin/glsl/bin/linux_x64)
INSTALL(DIRECTORY DESTINATION bin/glsl/bin/sparc64)
INSTALL(DIRECTORY DESTINATION bin/glsl/bin/macosx64)
INSTALL(FILES bin/linux_x64/glsl_compiler DESTINATION
	bin/glsl/bin/linux_x64 PERMISSIONS OWNER_EXECUTE OWNER_READ
	GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ)
INSTALL(FILES bin/sparc64/glsl_compiler DESTINATION
	bin/glsl/bin/sparc64 PERMISSIONS OWNER_EXECUTE OWNER_READ
	GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ)
INSTALL(FILES bin/macosx64/glsl_compiler DESTINATION
	bin/glsl/bin/macosx64 PERMISSIONS OWNER_EXECUTE OWNER_READ
	GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ)
INSTALL(FILES bin/macosx64/glsl_compiler10.7 DESTINATION
	bin/glsl/bin/macosx64 PERMISSIONS OWNER_EXECUTE OWNER_READ
	GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ)
INSTALL(FILES glsl_config.py DESTINATION bin/glsl)
INSTALL(FILES glsl_translate.py DESTINATION bin/glsl)
INSTALL(FILES sexps.py DESTINATION bin/glsl)
INSTALL(FILES glsl_math_func.h DESTINATION bin/glsl)
INSTALL(FILES glsl_runtime.h DESTINATION bin/glsl)
INSTALL(FILES glsl_simdclass.h DESTINATION bin/glsl)
