SET(SRCS
  main.cc
  tinymt64.cpp
  )

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
ADD_DEFINITIONS(-D__STDC_CONSTANT_MACROS)

ADD_EXECUTABLE(solid_render ${SRCS})

IF (WIN32)
TARGET_LINK_LIBRARIES(solid_render LSGLES)
ELSE()
TARGET_LINK_LIBRARIES(solid_render LSGLES dl)
ENDIF()

# --
INSTALL(TARGETS solid_render DESTINATION bin)
# --
