SET(SRCS
  main.cc
  tiny_swc.cc
  )

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
ADD_DEFINITIONS(-D__STDC_CONSTANT_MACROS)

ADD_EXECUTABLE(swc_render ${SRCS})
ADD_SANITIZERS(swc_render)

IF (WIN32)
TARGET_LINK_LIBRARIES(swc_render LSGLES)
ELSE()
TARGET_LINK_LIBRARIES(swc_render LSGLES dl)
ENDIF()

# --
INSTALL(TARGETS swc_render DESTINATION bin)
# --
